objects/Application_junction__c.object
<CustomObject>
    <label>Application junction</label>
    <nameField>
        <displayFormat>Form-{0000}</displayFormat>
        <label>Application junction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Application junctions</relationshipLabel>
        <relationshipName>Application_junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Form__c</fullName>
        <label>Job Form</label>
        <referenceTo>Recruiter__c</referenceTo>
        <relationshipLabel>Application junctions</relationshipLabel>
        <relationshipName>Application_junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>PUNE</fullName>
                </value>
                <value>
                    <fullName>VIZAG</fullName>
                </value>
                <value>
                    <fullName>BNG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1+</fullName>
                </value>
                <value>
                    <fullName>2+</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
                <value>
                    <fullName>5+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Applicant__c</fullName>
        <label>Name of Applicant</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>